--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   path_provider: ^2.0.2
   flutter_bloc: ^8.1.1
   rxdart: ^0.27.5
+  firebase_core: ^1.24.0
+  firebase_crashlytics: ^2.9.0
 
 dev_dependencies:
   flutter_test:
